# project-forge

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt
src/forge/: CMakeLists.txt
src/forge/src/: main.cpp
src/nexus/: CMakeLists.txt
src/nexus/include/nexus/: assert.h
src/nexus/include/nexus/graphics/: buffer.h  shader.h  vertex_array.h
src/nexus/include/nexus/math/: dimensions.h
src/nexus/include/nexus/outcome/: error.h  outcome.h
src/nexus/include/nexus/sys/: log.h  window.h
src/nexus/src/graphics/: buffer.cpp  shader.cpp  vertex_array.cpp
src/nexus/src/sys/: log.cpp  window.cpp
